--- a/src/css/scss/base/_base.scss
+++ b/src/css/scss/base/_base.scss
@@ -33,4 +33,18 @@ a {
     // text-decoration: underline;
   }
 }
+ul{
+  list-style: outside none none;
+  padding: 0;
+  margin: 0;
+}
+.container{  
+  padding: 10px;
+  max-width: 1200px;
+  width: 100%;
+  box-sizing: border-box;
+}
+
+
+
 
