--- a/src/css/scss/index.scss
+++ b/src/css/scss/index.scss
@@ -4,7 +4,7 @@
 }
 body {
   --page-background: #404046;
-  background-color: var(--page-background);
+  // background-color: var(--page-background);
 }
 // @import ur;
 // // 1. Configuration and helpers
