--- a/src/css/scss/components/_button.scss
+++ b/src/css/scss/components/_button.scss
@@ -16,25 +16,46 @@
   margin-top: 16px;
   display: inline-block;
 }
-
-.articles-carousel, .films-carousel, .social-carousel, .ui-ux-carousel, .case-studies-carousel, .brands-carousel{
+.read-more{
+  font-size: 16px;
+  line-height: 1.5;
+  color: #f7992c;
+  font-family: "S FPro Display";
+  .arrow {
+    border: solid #f7992c;
+    border-width: 0 2px 2px 0;
+    display: inline-block;
+    padding: 3px;
+  }
+  .right {
+    transform: rotate(-45deg);
+    -webkit-transform: rotate(-45deg);
+  }
+}
+.banner-carousel{
+  .owl-nav{
+    margin: 0;
+  }
   .owl-nav button.owl-prev, .owl-nav button.owl-next{
-    background-color: #0000007c;
-    width: 50px;
-    height: 50px;
+    background-color: #ffffff7c;
+    border-radius: 50px;
+    width: 32px;
+    height: 32px;
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
-    &.disabled{
-      display: none;
-    }
+    // &.disabled{
+    //   display: none;
+    // }
   }
   .owl-nav button.owl-prev{
+    left: 28px;
     img{
       transform: rotate(-180deg);
     }
   }
   .owl-nav button.owl-next{
-    right: 0
+    right: 28px;
   }
 }
+
