--- a/src/css/scss/layout/_footer.scss
+++ b/src/css/scss/layout/_footer.scss
@@ -1,15 +1,172 @@
 // -----------------------------------------------------------------------------
 // This file contains all styles related to the footer of the site/application.
 // -----------------------------------------------------------------------------
-footer{
-  background-color: #1f1f23;
+
+.footer-wrapper {
+  .container{  
+    // padding: 10px;
+    max-width: 1200px;
+    width: 100%;
+    box-sizing: border-box;
+  }
+  ul{
+    list-style: outside none none;
+    padding: 0;
+    margin: 0;
+  }
+  // background: #000000;
+  background: $black;
   padding: 40px 0;
-  p{
+
+  h2 {
+    color: $white;
+    font-family: 'SF Pro Display';
+    font-weight: normal;
+    font-style: normal;
+    font-size: 18px;
+    margin: 0 0 16px;
+    text-align: left;
+  }
+
+  ul.pop-resort {
+    font-size: 0;
+    margin-bottom: 40px;
+    padding-bottom: 30px;
+    border-bottom: 1px solid #474747;
+
+    li {
+      font-size: initial;
+      display: inline-block;
+      vertical-align: middle;
+      padding-right: 10px;
+      margin-right: 10px;
+      position: relative;
+
+      &::after {
+        content: "";
+        background: $white;
+        width: 1px;
+        height: 14px;
+        position: absolute;
+        right: 0;
+        top: 50%;
+        transform: translateY(-50%);
+        opacity: 0.6;
+      }
+
+      a {
+        color: $white;
+        font-family: 'SF Pro Display';
+        font-weight: normal;
+        font-style: normal;
+        font-size: 14px;
+        line-height: 34px;
+        text-align: left;
+        opacity: 0.6;
+      }
+    }
+  }
+
+
+  .middle-footer {
+    font-size: 0;
+    border-bottom: 1px solid #474747;
+    .lft-footmenu,.rgt-footmenu{
+      font-size: initial;
+      display: inline-block;
+      vertical-align: top;
+    }
+    .lft-footmenu{
+      width: 80%;
+    }
+    .rgt-footmenu.m-footmenu{
+      width: 20%;
+      .m-footlist {
+        width: 100%;
+        ul{
+          li{
+            color: $white;
+            opacity: 0.6;
+          }
+        }
+      }
+    }
+    .m-footmenu {
+        font-size: 0;
+      .m-footlist {
+        font-size: initial;
+        display: inline-block;
+        vertical-align: top;        
+        width: 20%;
+        h3 {
+          color: $white;
+          font-family: 'SF Pro Display';
+          font-weight: normal;
+          font-style: normal;
+          font-size: 16px;
+          margin: 0 0 16px;
+          text-align: left;
+        }
+
+        ul {
+          list-style: outside none none;
+          margin: 0 0 40px;
+          padding: 0;          
+          li {            
+            a {              
+              color: $white;
+              font-family: 'SF Pro Display';
+              font-weight: normal;
+              font-style: normal;
+              font-size: 16px;
+              line-height: 26px;
+              text-align: left;
+              opacity: 0.6;
+            }
+          }
+        }
+      }
+
+    }
+
+  }
+  .di-flex{
+    justify-content: space-between;
+    margin-top: 36px;
+    align-items: flex-start;
+  }
+  .tc-box{
+    color: #ffffff;
     font-size: 12px;
-    line-height: 29px;
-    color: #c2c2c3;
-    font-weight: 500;
-    font-family: "Montserrat";
-    text-align: center;
+    line-height: 1.5;
+    width: 50%;
+    strong{
+      font-size: 12px;
+      line-height: 1.5;
+      color: #ffffff;
+      font-family: "SF Pro Display";
+    }
+    a{
+      font-size: 12px;
+      line-height: 1.5;
+      color: #ffffff8d;
+      font-family: "SF Pro Display";
+      margin: 0 4px;
+    }
+  }
+  .social-madia{
+    width: 50%;
+    text-align: right;
+    a{
+      margin: 0 16px;
+      width: 24px;
+      height: 24px;
+      display: inline-block;
+      img{
+        width: auto;
+        display: inline-block;
+        height: auto;
+      }
+    }
   }
 }
