--- a/src/css/scss/layout/_header.scss
+++ b/src/css/scss/layout/_header.scss
@@ -1,73 +1,103 @@
 // -----------------------------------------------------------------------------
 // This file contains all styles related to the header of the site/application.
 // -----------------------------------------------------------------------------
-header {
-  .top-header {
-    width: 100%;
+.header {
+  filter: drop-shadow(0 0 10px #e1e1e1);
+  background-color: #ffffff;
+  box-shadow: 0 0 10px #e1e1e1;
+  padding: 10px 0;
+  margin-bottom: 36px;
+  .di-flex{
+    justify-content: space-between;
   }
-  .top-header li a {
-    text-decoration: none;
-    cursor: default;
+  .logo{
+    // width: 50%;
+    img{
+      margin: 0;
+    }
   }
-  nav.menu {
-    background: transparent;
-  }
-  .navbar {
-    padding: 0 0 5px;
-  }
-  .menubar {
-    padding: 0 0 0 43px;
-  }
-  .menubar li {
-    float: left;
-    margin-right: 41px;
-    position: relative;
-    padding: 42px 0 30px;
-  }
-  .menubar li:hover a {
-    color: #f15a22;
-  }
-  .menubar li a {
-    color: #c2c2c3;
-    font-family: inherit;
-    font-size: 12px;
-    font-weight: 500;
-    text-align: center;
-    letter-spacing: 0.4px;
-  }
-  .menubar li a img {
-    width: 40px;
-    padding-top: 5px;
-  }
-  .menubar li ul.sub-menu {
-    padding: 0;
-    margin: 0;
-    display: none;
-    position: absolute;
-    top: 91px;
-    left: 0;
-  }
-  .menubar li:hover ul.sub-menu {
-    display: block;
-    width: 240px;
-    background: #fff;
-  }
-  .menubar li ul.sub-menu li {
-    float: none;
-    padding: 0;
-    margin: 0;
-  }
-  .menubar li ul.sub-menu li a {
-    color: #1a1a1c !important;
-    text-align: left;
-    padding: 10px 20px;
-    font-size: 12px;
-    color: #fff;
-    font-weight: 500;
-    display: block;
-  }
-}
-.header-img{
-  width: 100%;
-  position: absolute;
+  
+// .nav a, .nav label {
+//   display: block;
+//  padding: .85rem;
+//   color: #fff;
+//   background-color: #151515;
+//   box-shadow: inset 0 -1px #1d1d1d;
+//   -webkit-transition: all .25s ease-in;
+//   transition: all .25s ease-in;
+// }
+
+// .nav a:focus, .nav a:hover, .nav label:focus, .nav label:hover {
+//   color: rgba(255, 255, 255, 0.5);
+//   background: #030303;
+// }
+
+// .nav label { cursor: pointer; }
+
+// /**
+//  * Styling first level lists items
+//  */
+
+// .group-list a, .group-list label {
+//   padding-left: 2rem;
+//   background: #252525;
+//   box-shadow: inset 0 -1px #373737;
+// }
+
+// .group-list a:focus, .group-list a:hover, .group-list label:focus, .group-list label:hover { background: #131313; }
+
+// /**
+//  * Styling second level list items
+//  */
+
+// .sub-group-list a, .sub-group-list label {
+//   padding-left: 4rem;
+//   background: #353535;
+//   box-shadow: inset 0 -1px #474747;
+// }
+
+// .sub-group-list a:focus, .sub-group-list a:hover, .sub-group-list label:focus, .sub-group-list label:hover { background: #232323; }
+
+// /**
+//  * Styling third level list items
+//  */
+
+// .sub-sub-group-list a, .sub-sub-group-list label {
+//   padding-left: 6rem;
+//   background: #454545;
+//   box-shadow: inset 0 -1px #575757;
+// }
+
+// .sub-sub-group-list a:focus, .sub-sub-group-list a:hover, .sub-sub-group-list label:focus, .sub-sub-group-list label:hover { background: #333333; }
+
+// /**
+//  * Hide nested lists
+//  */
+
+// .group-list, .sub-group-list, .sub-sub-group-list {
+//   height: 100%;
+//   max-height: 0;
+//   overflow: hidden;
+//   -webkit-transition: max-height .5s ease-in-out;
+//   transition: max-height .5s ease-in-out;
+// }
+
+// .nav__list input[type=checkbox]:checked + label + ul { /* reset the height when checkbox is checked */
+// max-height: 1000px; }
+
+// /**
+//  * Rotating chevron icon
+//  */
+
+// label > span {
+//   float: right;
+//   -webkit-transition: -webkit-transform .65s ease;
+//   transition: transform .65s ease;
+// }
+
+// .nav__list input[type=checkbox]:checked + label > span {
+//   -webkit-transform: rotate(90deg);
+//   -ms-transform: rotate(90deg);
+//   transform: rotate(90deg);
+// }
 }
