--- a/src/css/scss/base/_base.scss
+++ b/src/css/scss/base/_base.scss
@@ -33,4 +33,11 @@ a {
     // text-decoration: underline;
   }
 }
-
+.sub-title{
+  font-size: 20px;
+  line-height: 1.5;
+  color: #000000;
+  font-weight: bold;
+  font-family: "SF Pro Display";
+  margin-bottom: 16px;
+}
