--- a/src/css/scss/pages/_home.scss
+++ b/src/css/scss/pages/_home.scss
@@ -4,10 +4,14 @@
 .banner-section{
   .di-flex{
     justify-content: space-between;
+    align-items: flex-start;
   }
   article{
     width: 66%;
     max-width: 100%;
+    position: relative;
+    top: 0;
+    left: 0;
     .banner-item{
       display: grid;
       .bg-img, .content{
@@ -29,7 +33,31 @@
         margin-bottom: 16px;
       }
     }
-  
+    .cat-row{
+      border-radius: 5px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.05);
+      background-color: #ffffff;
+      font-size: 12px;
+      line-height: 60px;
+      color: #000000;
+      font-family: "SF Pro Display";
+      position: absolute;
+      left:50%;
+      // right: auto;
+      transform: translateX(-50%);
+      bottom: -40px;
+      z-index: 1;
+      width: 90%;
+      display: flex;
+      justify-content: center;
+      a{
+        font-size: 12px;
+        line-height: 60px;
+        color: #000000;
+        font-family: "SF Pro Display";
+        margin: 0 8px;
+      }
+    }
   }
   aside{
     width: 33%;
@@ -46,7 +74,8 @@
         line-height: 1.5;
         color: #000000;
         font-weight: bold;
-        font-family: "S FPro Display";
+        font-family: "SF Pro Display";
+        margin-bottom: 24px;
       }
       .form {
         padding: 1px 0;
@@ -63,14 +92,37 @@
       .col-input {
         margin-bottom: 10px;
         width: 46%;
-        margin: 0 0% 48px 0%;
+        margin: 0 0% 12px 0%;
         position: relative;
         top: 0;
         left: 0;
+        &:nth-child(even){
+          margin-left: 6px;
+        }
+        &:nth-child(odd){
+          margin-right: 6px;
+        }
+        &.width-100{
+          width: 100%;
+          margin-left: 0;
+          margin-right: 0;
+        }
+        &.select-input{
+          .control{
+            display: flex;
+            align-items: flex-start;
+            .check-box{
+              margin-right: 8px;
+            }
+          }
+          
+        }
       }
       .label{
         width: 100%;
-        font-size: 20px;
+        color: #000000;
+        font-size: 12px;
+        font-family: "SF Pro Display";
         &.error{
           color: #E34949;
         }
@@ -86,7 +138,7 @@
         font-size: 14px;
         height: 30px;
         color: #010101;
-        font-family: "S FPro Display";
+        font-family: "SF Pro Display";
         border-radius: 5px;
         background-color: #ebebeb;
         border: 1px solid #acacac;
@@ -153,19 +205,22 @@
         width: auto;
       }
       .submit-btn {
-        font-weight: 600;
-        font-size: 22px;
-        line-height: 26px;
         display: flex;
         align-items: center;
         text-align: center;
         color: #ffffff;
-        border-radius: 50px;
-        background: #202020;
-        padding: 14px 64px;
+        border-radius: 5px;
+        background-color: #f7992c;
+        padding: 8px 0;
         border: none;
         display: inline-block;
         cursor: pointer;
+        font-size: 16px;
+        line-height: 1.5;
+        color: #ffffff;
+        font-weight: 500;
+        font-family: "SF Pro Display";
+        width: 100%;
       }
       .form-content {
         .invalid,
@@ -181,5 +236,212 @@
         }
       }
     }
+  }
+}
+.category-section{
+  margin-top: 60px;
+  .category-box{
+    justify-content: space-between;
+    margin-bottom: 8px;
+  }
+  .cat-box{
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0px 150px 75px rgba(0,0,0,0.05);
+    background-color: #ffffff;
+    width: 32%;
+    margin-bottom: 32px;
+    cursor: pointer;
+    &:hover{
+      box-shadow: 0px 150px 75px rgba(0,0,0, 0.1);
+    }
+    .img-box{
+      margin-bottom: 12px;
+      img{
+        width: 100%;
+      }
+    }
+    .content{
+      justify-content: space-between;
+      align-items: center;
+
+      .text{
+        h2{
+          font-size: 20px;
+          line-height: 1.5;
+          color: #000000;
+          font-weight: bold;
+          font-family: "SF Pro Display";
+          margin-bottom: 4px;
+        }
+        p{
+          font-size: 12px;
+          line-height: 1.5;
+          color: #000000;
+          font-family: "SF Pro Display";
+        }
+      }
+      .link{
+        .btn{
+          font-size: 12px;
+          line-height: 1.5;
+          color: #f7992c;
+          font-family: "SF Pro Display";
+          .arrow {
+            border: solid #f7992c;
+            border-width: 0 2px 2px 0;
+            display: inline-block;
+            padding: 3px;
+          }
+          .right {
+            transform: rotate(-45deg);
+            -webkit-transform: rotate(-45deg);
+          }
+        }
+      }
+    }
+  }
+}
+.largest-section{
+  margin-bottom: 64px;
+  .title-box{
+    justify-content: space-between;
+    padding: 0 16px;
+  }
+  .blog-carousel{
+    .item{
+      // filter: drop-shadow(0 0 15px rgba(5,5,5,0.05));
+      box-shadow: 0 0 15px rgba(5,5,5,0.05);
+      background-color: #ffffff;
+      margin: 16px;
+      .content{
+        padding: 32px;
+        h2{
+          font-size: 16px;
+          line-height: 24px;
+          color: #000000;
+          font-weight: bold;
+          font-family: "Helvetica";
+          margin-bottom: 8px;
+        }
+        .catname{
+          font-size: 12px;
+          letter-spacing: 0px;
+          line-height: 1.5;
+          color: #ffffff;
+          font-family: "SF Pro Display";
+          text-align: center;
+          display: inline-block;
+          background-color: #f7992c;
+          padding: 8px;
+          margin-bottom: 16px;
+          margin-right: 8px;
+        }
+        p{
+          font-size: 14px;
+          line-height: 24px;
+          color: #5b5b5b;
+          font-family: "SF Pro Display";
+          margin-bottom: 16px;
+        }
+      }
+      .date{
+        font-size: 12px;
+        letter-spacing: 0px;
+        line-height: 70px;
+        color: #000000;
+        font-family: "SF Pro Display";
+      }
+      .image-container{
+        position: relative;
+        top: 0;
+        left: 0;
+        .play-btn{
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+          cursor: pointer;
+          width: 72px;
+          height: auto;
+        }
+      }
+    }
+  }
+}
+.visit-place-section{
+
+  .visit-flex{
+    justify-content: space-between;
+  }
+  .left-side{
+    width: 66%;
+    background-color: #ffffff;
+
+  }
+  .right-side{
+    width: 33%;
+  }
+  .visit-ind{
+    margin-right: 2px;
+    }
+  .visit-out .cas-in .lft-txt{
+    margin-left: 5px;
+  }
+  .visit-ind .cas-in .lft-txt{
+    margin-left: 5px;
+  }
+  .check-out{
+    padding: 20px;
+    border-radius: 5px;
+    background-color: rgb(255, 255, 255);
+    box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
+    margin-bottom: 20px;
+  }
+  .cas-in{
+    display: flex;
+    align-items: center;
+    margin-bottom: 30px;
+  }
+  .lft-img{
+    width: 100%;
+    max-width: auto;
+    height: auto;
+  }
+  .lft-txt p{
+    font-size: 14px;
+    line-height: 20px;
+    font-weight: 600;
+    margin-bottom: 14px;
+  }
+  .arrow{
+    color: #f7992c;
+    font-size: 14px;
+  }
+  .arrow:hover{
+    color: #f7992c;
+    text-decoration: none;
+  }
+  a:active {
+    color: #f7992c;
+    line-height: inherit;
+    text-decoration: none;
+  }
+  .arrow img{
+    margin-left: 10px;
+    align-items: center;
+  }
+  .sub-h-1{
+    font-size: 20px;
+    color: #000000;
+    margin: 0 auto;
+    margin-bottom: 30px;
+  }
+  .set-box select{
+    width: 100%;
+    height:40px;
+    border-radius: 5px;
+    background-color: rgba(247, 153, 44, 0);
+    margin-bottom: 20px;
   }
 }
