--- a/src/css/scss/layout/_footer.scss
+++ b/src/css/scss/layout/_footer.scss
@@ -3,6 +3,7 @@
 // -----------------------------------------------------------------------------
 
 .footer-wrapper {
+  overflow: hidden;
   .container{  
     // padding: 10px;
     max-width: 1200px;
@@ -158,14 +159,20 @@
     width: 50%;
     text-align: right;
     a{
-      margin: 0 16px;
+      margin: 0 8px;
       width: 24px;
       height: 24px;
       display: inline-block;
+      text-align: center;
+      vertical-align: middle;
       img{
         width: auto;
         display: inline-block;
         height: auto;
+        object-fit: contain;
+        max-width: 100%;
+        max-height: 100%;
+        margin: 0 auto;
       }
     }
   }
