--- a/src/css/scss/pages/_home.scss
+++ b/src/css/scss/pages/_home.scss
@@ -370,7 +370,7 @@
   }
 }
 .visit-place-section{
-
+  margin-bottom: 36px;
   .visit-flex{
     justify-content: space-between;
   }
@@ -379,28 +379,44 @@
     background-color: #ffffff;
 
   }
+  .bplace{
+    box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
+    border-radius: 8px;
+
+  }
+  .visit-out{
+    width: 50%;
+    &:first-child{
+      border-right: 1px solid #0000002a;
+    }
+
+  }
   .right-side{
     width: 33%;
+    .check-out{
+      box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
+      border-radius: 8px;
+    }
   }
   .visit-ind{
     margin-right: 2px;
     }
-  .visit-out .cas-in .lft-txt{
-    margin-left: 5px;
+ .lft-txt{
+    margin-left: 16px;
   }
-  .visit-ind .cas-in .lft-txt{
-    margin-left: 5px;
-  }
+  // .visit-ind .cas-in .lft-txt{
+  //   margin-left: 5px;
+  // }
   .check-out{
     padding: 20px;
-    border-radius: 5px;
     background-color: rgb(255, 255, 255);
-    box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
+    
     margin-bottom: 20px;
+    border-radius: 8px;
   }
   .cas-in{
     display: flex;
-    align-items: center;
+    // align-items: center;
     margin-bottom: 30px;
   }
   .lft-img{
@@ -428,14 +444,41 @@
     text-decoration: none;
   }
   .arrow img{
-    margin-left: 10px;
-    align-items: center;
+    margin: 0;
+    display: inline-block;
+    margin-left: 8px;
+    width: auto;
+  }
+  .places-cards{
+    .owl-dots .owl-dot button {
+      background: none;
+      border: none;
+      padding: 0;
+      color: #000000;
+      font-size: 14px;
+      font-weight: bold;
+      cursor: pointer;
+      border-radius: 10px;
+      width: 20px;
+      height: 20px;
+      margin: 0 8px;
+    }
+    .owl-dots .owl-dot.active button {
+      color: #ffffff;
+      background-color: #f7992c;
+
+    }
   }
   .sub-h-1{
+    // font-size: 20px;
+    // color: #000000;
+    // margin: 0 auto;
+    margin-bottom: 24px;
     font-size: 20px;
+    line-height: 1.5;
     color: #000000;
-    margin: 0 auto;
-    margin-bottom: 30px;
+    font-weight: bold;
+    font-family: "SF Pro Display";
   }
   .set-box select{
     width: 100%;
@@ -443,5 +486,31 @@
     border-radius: 5px;
     background-color: rgba(247, 153, 44, 0);
     margin-bottom: 20px;
+    font-size: 12px;
+    padding: 8px 16px;
+  }
+}
+.about-club{
+  padding: 80px 0;
+  .content{
+    width: 100%;
+    max-width: 940px;
+    margin: 0 auto;
+  }
+  .title{
+    font-size: 20px;
+    line-height: 1.5;
+    color: #000000;
+    font-weight: bold;
+    margin-bottom: 24px;
+    text-align: center;
+  }
+  .text{
+    font-size: 14px;
+    line-height: 1.5;
+    color: #555555;
+    text-align: center;
+    margin-bottom: 24px;
+    // &:not()
   }
 }
