--- a/src/css/scss/base/_typography.scss
+++ b/src/css/scss/base/_typography.scss
@@ -25,3 +25,10 @@ p,h1,h2,h3,h4,h5,h6{
 .text-right{
   text-align: right;
 }
+
+.cb-title{
+  font-size: 20px;
+  line-height: 1.5;
+  color: #000000;
+  font-weight: bold;
+}
