--- a/src/css/scss/layout/_header.scss
+++ b/src/css/scss/layout/_header.scss
@@ -119,7 +119,7 @@
     position: sticky;
     animation: slide-down 0.7s;
   }
-  .di-flex {
+  .main-flex {
     align-items: center;
     position: relative;
     left: 0;
@@ -137,6 +137,7 @@
   .all-in-one{
     display: block;
     width: 60%;
+    margin-left: auto;
     // position: relative;
     // left: 0;
     // top: 0;
@@ -207,7 +208,56 @@
         //   top: 0;
         //   background: #fff;
         // }
+        .img-box{
+          width: 30%;
+          figure{
+            margin: 0;
+            position: relative;
+            left: 0;
+            top: 0;
+            .content{
+              position: absolute;
+              top: 0;
+              left: 0;
+              height: 100%;
+              width: 100%;
 
+              display: flex;
+              align-items: center;
+              .text{
+                padding: 24px;
+                p{
+                  font-size: 14px;
+                  font-weight: 700;
+                  color: #fff;
+                  margin: 0;
+                  &.header-title{
+                    font-size: 40px;
+                  }
+                }
+              }
+            }
+          }
+        }
+        .link-content{
+          width: 35%;
+          padding: 0 24px;
+          .title{
+            // font-family: 'Poppins', sans-serif;
+            font-weight: 600;
+            font-size: 14px;
+            margin-bottom: 10px;
+            display: block;
+            color: #000;
+            margin-bottom: 16px;
+          }
+          .pos-top{
+            font-size: 12px;
+            color: #333;
+            padding: 0px 0 10px;
+            display: block;
+          }
+        }
         li {
           a {
             font-family: "SF Pro Display";
@@ -296,7 +346,7 @@
     }
   }
   .login-search{
-    width: 24%;
+    width: auto;
     justify-self: flex-end;
     display: flex;
     align-items: center;
@@ -455,4 +505,181 @@
 
 .mob-menu{
   display: none;
+}
+.mobile-menu-btn, .mobile-menu{
+  display: none;
+}
+
+@media (max-width: 991.98px) {
+  .main-wrapper .acc-header {
+    padding: 24px 0;
+  }
+  .approach-page .control-growth #controlGrowth.control .content-box{padding-right:86px;}
+  .approach-page .control-growth #controlGrowth.control .content-box p{font-size: 16px;}  
+  // .main-wrapper .acc-header .nav-bar {
+  //   display: none;
+  // }
+  .main-wrapper .acc-header .logo-box {
+    // flex-grow: 1;
+    img {
+      margin-left: 0;
+    }
+  }
+  .mobile-menu-btn {
+    margin-right: 20px;
+  }
+  .main-wrapper .acc-header .login-search {
+    flex-grow: 1;
+  }
+  .main-wrapper .acc-header .logo-box {
+    width: 28%;
+  }
+  .main-wrapper .acc-header .all-in-one{
+    width: 0%;
+  }
+  .main-wrapper .acc-header .login-search .login-btn {
+    width: auto;
+    padding: 8px;
+    font-size: 12px;
+    height: auto;
+    line-height: normal;
+  }
+  // mobile menu
+  .mobile-menu-btn, .mobile-menu{
+    display: block;
+  }
+  .mobile-menu {
+    display: block;
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 0;
+    background-color: #0000004f;
+    z-index: 110;
+    overflow-x: hidden;
+    // -webkit-animation-name: slideInLeft;
+    // animation-name: slideInLeft;
+    // animation-duration: 1s;
+    // width: 100%;
+    transition: width 0.2s ease-in;
+    &.open {
+      width: 100% !important;
+    }
+    .link-cotainer {
+      background-color: #4a1a50;
+      padding: 20px 20px 240px 20px;
+      position: relative;
+      left: 0%;
+      top: 0%;
+      .close-link {
+        display: inline-flex;
+        font-size: 16px;
+        line-height: 36px;
+        color: #f2f3f4;
+        font-weight: 400;
+        font-family: "Roboto";
+        width: 24px;
+        height: 24px;
+        border-radius: 12px;
+        justify-content: center;
+        align-items: center;
+        margin-bottom: 32px;
+        height: auto;
+        width: auto;
+      }
+      .nav-bar{
+        width: 100%;
+        display: block;
+        .nav-item{
+          width: 100%;
+        }
+        .link {
+          font-size: 14px;
+          line-height: 40px;
+          color: #ffffff;
+          font-family: "Helvetica";
+          display: block;
+          cursor: pointer;
+          padding: 0;
+          padding-left: 40px;
+          &.nav-acc-link{
+            // background-color: red;
+            position: relative;
+            left: 0;
+            top: 0;
+            &::after{
+              content: "";
+              height: 8px;
+              width: 12px;
+              // background-color: $white;
+              border-top: 8px solid $white;
+              border-left: 8px solid transparent;
+              border-right: 8px solid transparent;
+              position: absolute;
+              right: 24px;
+              top: 50%;
+              transform: translateY(-50%);
+            }
+          }
+        }
+      }
+     
+      .box-struc-grid {
+        display: grid;
+        grid-template-columns: repeat(4, 70px);
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        width: 280px;
+        .box {
+          height: 70px;
+          position: relative;
+          top: 0;
+          left: 0;
+         
+          &.fill {
+            background-color: #aaff31;
+            &::after{
+              content: " ";
+              border-bottom: 2px solid #aaff31;
+              border-right: 2px solid #aaff31;
+              height: inherit;
+              width: 70px;
+              position: absolute;
+              left: 0;
+              top: 0;
+            }
+          }
+        }
+      }
+    }
+  }
+  .main-wrapper .acc-header .nav-bar .nav-item:hover .sub-list {
+    display: none;
+
+  }
+  .main-wrapper .acc-header .nav-bar .nav-item .sub-list{
+    display: none;
+    position: static;
+    background-color: transparent;
+    width: 100%;
+    padding-top: 0;
+    padding-bottom: 0;
+    box-shadow: none;
+    &::after{
+      display: none;
+    }
+    
+  }
+  .sub-list-active{
+    display: block !important;
+  }
+  .main-wrapper .acc-header .nav-bar .nav-item .sub-list li a{
+    color: $white;
+    font-size: 14px;
+    line-height: 40px;
+    padding: 0;
+    padding-left: 40px;
+  }
 }
