npm module accordian-js installed, below are modilefied files, individual ne page htmlized modified:   package.json modified:   src/css/scss/abstracts/_variables.scss new file:   src/css/scss/base/_accordian.scss modified:   src/css/scss/index.scss modified:   src/css/scss/layout/_header.scss new file:   src/css/scss/pages/_individual.scss new file:   src/img/date-picker-icon.png new file:   src/img/down-arrow.png new file:   src/img/individual-image.jpg new file:   src/img/individual-poster-1.jpg new file:   src/img/individual-poster.jpg new file:   src/img/star-rating.png new file:   src/individual.html modified:   src/js/app.js modified:   webpack.config.js

--- a/src/css/scss/index.scss
+++ b/src/css/scss/index.scss
@@ -25,6 +25,7 @@ body {
   'base/typography',
   'base/helpers';
 
+@import 'accordion-js/dist/accordion.min.css';
 
 // // 4. Layout-related sections
 @import
@@ -38,7 +39,10 @@ body {
 // // 6. Page-specific styles
 @import
   'pages/home',
-  'pages/detail';
+  'pages/detail',
+  'pages/individual';
+
+
 
 // // 7. Themes
 @import
