index page resonsive

--- a/src/css/scss/index.scss
+++ b/src/css/scss/index.scss
@@ -7,6 +7,7 @@ body {
   // background-color: var(--page-background);
 }
 // @import ur;
+@import 'accordion-js/dist/accordion.min.css';
 // // 1. Configuration and helpers
 @import
   'abstracts/variables',
