--- a/src/css/scss/layout/_footer.scss
+++ b/src/css/scss/layout/_footer.scss
@@ -177,3 +177,11 @@
     }
   }
 }
+@media (max-width: 1199.98px) {
+
+}
+@media (max-width: 991.98px) {
+  .footer-wrapper .middle-footer .lft-footmenu, .footer-wrapper .middle-footer .rgt-footmenu.m-footmenu, .footer-wrapper .middle-footer .m-footmenu .m-footlist{
+    width: 100%;
+  }
+}
