--- a/src/css/scss/base/_base.scss
+++ b/src/css/scss/base/_base.scss
@@ -41,3 +41,8 @@ a {
   font-family: "SF Pro Display";
   margin-bottom: 16px;
 }
+@media (max-width: 991.98px) {
+  .s-dis-none{
+      display: none;
+  }
+}
