index page responsive and popup

--- a/src/css/scss/layout/_footer.scss
+++ b/src/css/scss/layout/_footer.scss
@@ -78,16 +78,17 @@
       vertical-align: top;
     }
     .lft-footmenu{
-      width: 80%;
+      width: 73.50%;
     }
     .rgt-footmenu.m-footmenu{
-      width: 20%;
+      width: 26.50%;
       .m-footlist {
         width: 100%;
         ul{
           li{
             color: $white;
             opacity: 0.6;
+            overflow-wrap: break-word;
           }
         }
       }
@@ -99,6 +100,7 @@
         display: inline-block;
         vertical-align: top;        
         width: 20%;
+        padding-right: 8px;
         h3 {
           color: $white;
           font-family: 'SF Pro Display';
@@ -107,6 +109,7 @@
           font-size: 16px;
           margin: 0 0 16px;
           text-align: left;
+          
         }
 
         ul {
@@ -140,7 +143,7 @@
     color: #ffffff;
     font-size: 12px;
     line-height: 1.5;
-    width: 50%;
+    width: 70%;
     strong{
       font-size: 12px;
       line-height: 1.5;
@@ -156,7 +159,7 @@
     }
   }
   .social-madia{
-    width: 50%;
+    width: 30%;
     text-align: right;
     a{
       margin: 0 8px;
@@ -176,12 +179,112 @@
       }
     }
   }
-}
-@media (max-width: 1199.98px) {
+  .ac {
+    margin: 0;
+    border: none;
+    background-color: transparent;
+  }
+  .ac .ac-trigger{
+    color: #ffffff;
+    font-family: "SF Pro Display";
+    font-weight: normal;
+    font-style: normal;
+    font-size: 16px;
+    margin: 0;
+    text-align: left;
+    padding: 0;
+  }
+  .ac .ac-panel .ac-text{
+    padding: 0;
+  }
+  .ac .ac-trigger::after{
+    // display: none;
+    visibility: hidden;
+  }
 
 }
-@media (max-width: 991.98px) {
-  .footer-wrapper .middle-footer .lft-footmenu, .footer-wrapper .middle-footer .rgt-footmenu.m-footmenu, .footer-wrapper .middle-footer .m-footmenu .m-footlist{
+.scroll-top {
+  background-color: #35332d;
+  border: 2px solid #fff;
+  position: fixed;
+  width: 45px;
+  height: 45px;
+  bottom: 60px;
+  right: 28px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1;
+  width: 60px;
+  height: 60px;
+  border-radius: 30px;
+  background-color: #f7992c;
+}
+.popup-form{
+
+  .form-container{
+    max-width: 520px;
+  }
+  button.popup_close.mutiStepForm_close{
+    background-color: red;
+    position: absolute;
+    top: -20px;
+    right: -20px;
+    width: 44px;
+    height: 44px;
+    border-radius: 22px;
+    background-color: #ffffff;
+    border: 2px solid #000000;
+    font-size: 24px;
+    line-height: 32px;
+    color: #000000;
+    font-weight: bold;
+  }
+  .form-container .col-input{
     width: 100%;
+    margin-left: 0 !important;
+      margin-right: 0 !important;
+    // &:nth-child(odd){
+      
+    // }
+    
+  }
+}
+@media (max-width: 1199.98px) {
+  .footer-wrapper .middle-footer .lft-footmenu, .footer-wrapper .middle-footer .rgt-footmenu.m-footmenu, .footer-wrapper .middle-footer .m-footmenu .m-footlist{
+    width: 50%;
+  }
+}
+@media (max-width: 991.98px) {
+  .footer-wrapper .middle-footer .lft-footmenu, .footer-wrapper .middle-footer .rgt-footmenu.m-footmenu, .footer-wrapper .middle-footer .m-footmenu .m-footlist, .footer-wrapper .tc-box, .footer-wrapper .social-madia{
+    width: 100%;
+  }
+  .footer-wrapper .middle-footer .m-footmenu .m-footlist h3 {
+    padding: 8px 0;
+    margin: 0;
+  }
+  .middle-footer .m-footmenu .m-footlist {
+    border-bottom: 1px solid #474747;
+  }
+  .footer-wrapper .ac .ac-trigger::after {
+    visibility: visible;
+  }
+  .footer-wrapper .social-madia{
+    text-align: left;
+  }
+  .footer-wrapper .ac .ac-trigger {
+    font-size: 14px;
+  }
+  .footer-wrapper .tc-box{
+    margin-bottom: 24px;
+  }
+  .footer-wrapper .middle-footer {
+    border-bottom: none;
+  } 
+  .popup-form .form-container {
+    max-width: 100%;
+  }
+  section#mutiStepForm {
+    width: 86%;
   }
 }
