--- a/src/css/scss/layout/_header.scss
+++ b/src/css/scss/layout/_header.scss
@@ -398,7 +398,7 @@
       left: 0;
       margin-right: 8px;
       transition: all 0.3s ease;
-        
+      
       font-size: 14px;
       line-height: 1.5;
       color: #ffffff;
@@ -406,6 +406,8 @@
       font-family: "SF Pro Display";
       border-radius: 5px;
       background-color: #f7992c;
+      border: none;
+      outline: none;
       // &::after{
       //   content: "";
       //   position: absolute;
@@ -598,6 +600,7 @@
         margin-bottom: 32px;
         height: auto;
         width: auto;
+        cursor: pointer;
         // background-color: #eee;
       }
       .nav-bar{
@@ -771,7 +774,7 @@
       //   background-color: #510B46;
       // }
       &:hover{
-        color: #4A1A50;
+        color: #fff;
         // background-color: #AAFF31;
       }
     }
@@ -822,6 +825,9 @@
     }
     .ac .ac-trigger:focus {
       color: #000;
+    }
+    .ac.is-active .ac-trigger{
+      color: #ccc;
     }
   }
 }
