--- a/src/css/scss/index.scss
+++ b/src/css/scss/index.scss
@@ -39,7 +39,8 @@ body {
 // // 6. Page-specific styles
 @import
   'pages/home',
-  'pages/detail';
+  'pages/detail',
+  'pages/individual';
 
 // // 7. Themes
 @import
