--- a/src/css/scss/pages/_detail.scss
+++ b/src/css/scss/pages/_detail.scss
@@ -203,6 +203,7 @@
   border-radius: 8px;
   background-color: #ffffff;
   padding: 32px;
+  box-shadow: 0px 0px 30px 0px rgb(0 0 0 / 5%);
   .cb-title{
     margin-bottom: 16px;
   }
