--- a/src/css/scss/layout/_header.scss
+++ b/src/css/scss/layout/_header.scss
@@ -221,7 +221,7 @@
               left: 0;
               height: 100%;
               width: 100%;
-
+              background-color: #00000042;
               display: flex;
               align-items: center;
               .text{
@@ -736,6 +736,14 @@
         margin: 0;
         border: 0;
         padding: 0;
+        font-size: 16px;
+        letter-spacing: 2px;
+        line-height: 1.5;
+        color: #000000;
+        font-family: "SF Pro Display";
+        font-weight: normal;
+        border-bottom: 1px solid #ccc;
+        padding: 8px;
       }
     }
     .login-btn{
@@ -799,23 +807,28 @@
       margin: 4px;
     }
     .link{
-      font: bold 16px Arial,sans-serif;
-      color: #111;
+      // font: bold 16px Arial,sans-serif;
+      // color: #111;
       text-align: left;
       width: 100%;
       display: block;
-      cursor: pointer;
-      background-color: transparent;
-      transition: color .25s ease;
-      position: relative;
+      // cursor: pointer;
+      // background-color: transparent;
+      // transition: color .25s ease;
+      // position: relative;
       text-decoration: none;
-      padding: 0 4px;
+      border-bottom: 1px solid #ccc;
+      padding: 8px 12px;
+      font-size: 16px;
+      letter-spacing: 2px;
+      line-height: 1.5;
+      color: #000000;
+      font-family: "SF Pro Display";
+      margin: 0;
     }
-    // .ac.is-active{
-    //   .ac-panel{
-    //     padding: 8px;
-    //   }
-    // } 
+    .ac{
+      margin: 0;
+    }
     .mega_menu{
       padding: 8px;
 
