--- a/src/css/scss/pages/_detail.scss
+++ b/src/css/scss/pages/_detail.scss
@@ -212,8 +212,8 @@
     margin-bottom: 30px;
   }
   .lft-img {
-    width: 100%;
-    max-width: auto;
+    width: 200px;
+    max-width: 100%;
     height: auto;
   }
   .lft-txt {
@@ -223,6 +223,12 @@
       line-height: 20px;
       font-weight: 600;
       margin-bottom: 14px;
+      color: #000000;
+      display: -webkit-box;
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
     .arrow {
       color: #f7992c;
