--- a/src/css/scss/pages/_home.scss
+++ b/src/css/scss/pages/_home.scss
@@ -8,12 +8,18 @@
   }
   article{
     // width: ;
-    width: calc(66.50% - 8px);
+    width: calc(100% - 380px);
     
     max-width: 100%;
     position: relative;
     top: 0;
     left: 0;
+    // .banner-carousel{
+    //   height: 100%;
+    //   .owl-stage-outer, .owl-stage{
+    //     height: 100%;
+    //   }
+    // }
     .banner-item{
       display: grid;
       .bg-img, .content{
@@ -26,7 +32,7 @@
         align-items: center;
         height: 100%;
       }
-      h2{
+      h1{
         font-size: 24px;
         line-height: 1;
         color: #ffffff;
@@ -71,7 +77,7 @@
   }
   aside{
     // width: ;
-    width: calc(33.50% - 20px);
+    width: 360px;
     max-width: 100%;
    
   }
@@ -482,6 +488,11 @@
     line-height: 20px;
     font-weight: 600;
     margin-bottom: 4px;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
   .arrow{
     color: #f7992c;
@@ -577,20 +588,24 @@
   .visit-place-section .sub-h-1 {
     font-size: 16px;
   }
-  .largest-section .blog-carousel .item {
-    margin: 0px;
-  }
-  .form-container .col-input{
-    width: 100%;
-  }
-  .form-container .col-input:nth-child(even), .form-container .col-input:nth-child(odd){
-    margin-left: 0;
-    margin-right: 0;
-  }
+  
+  // .form-container .col-input{
+  //   width: 100%;
+  // }
+  // .form-container .col-input:nth-child(even), .form-container .col-input:nth-child(odd){
+  //   margin-left: 0;
+  //   margin-right: 0;
+  // }
+  .banner-section article .cat-row a {
+    margin: 0 4px;
+  } 
 }
 @media (max-width: 991.98px) {
   .banner-section article {
     width: 100%;
+  }
+  .largest-section .blog-carousel .item {
+    margin: 0px;
   }
   .banner-section article .cat-row {
     overflow-x: auto;
